--- a/public/404.html
+++ b/public/404.html
@@ -1,59 +1,59 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="no">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>404 - Side ikke funnet</title>
     <style>
-        body {
-            font-family: 'Inter', sans-serif;
-            background-color: #F9FAFB;
-            color: #111827;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-        }
-        .container {
-            text-align: center;
-            max-width: 600px;
-            padding: 2rem;
-        }
-        h1 {
-            font-size: 4rem;
-            color: #1E3A8A;
-            margin-bottom: 1rem;
-        }
-        h2 {
-            font-size: 1.5rem;
-            margin-bottom: 1rem;
-        }
-        p {
-            color: #6B7280;
-            margin-bottom: 2rem;
-        }
-        .btn {
-            background-color: #1E3A8A;
-            color: white;
-            padding: 0.75rem 1.5rem;
-            text-decoration: none;
-            border-radius: 0.375rem;
-            display: inline-block;
-            transition: background-color 0.2s;
-        }
-        .btn:hover {
-            background-color: #2563EB;
-        }
+      body {
+        font-family: 'Inter', sans-serif;
+        background-color: #f9fafb;
+        color: #111827;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
+      }
+      .container {
+        text-align: center;
+        max-width: 600px;
+        padding: 2rem;
+      }
+      h1 {
+        font-size: 4rem;
+        color: #1e3a8a;
+        margin-bottom: 1rem;
+      }
+      h2 {
+        font-size: 1.5rem;
+        margin-bottom: 1rem;
+      }
+      p {
+        color: #6b7280;
+        margin-bottom: 2rem;
+      }
+      .btn {
+        background-color: #1e3a8a;
+        color: white;
+        padding: 0.75rem 1.5rem;
+        text-decoration: none;
+        border-radius: 0.375rem;
+        display: inline-block;
+        transition: background-color 0.2s;
+      }
+      .btn:hover {
+        background-color: #2563eb;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <h1>404</h1>
-        <h2>Siden ble ikke funnet</h2>
-        <p>Beklager, men siden du leter etter eksisterer ikke.</p>
-        <a href="/" class="btn">Tilbake til forsiden</a>
+      <h1>404</h1>
+      <h2>Siden ble ikke funnet</h2>
+      <p>Beklager, men siden du leter etter eksisterer ikke.</p>
+      <a href="/" class="btn">Tilbake til forsiden</a>
     </div>
-</body>
-</html> 
+  </body>
+</html>
